--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 absl-py==1.4.0
 alabaster==0.7.12
 anaconda-client
-anaconda-navigator==2.3.1
+anaconda-navigator
 anyio==3.5.0
 appdirs==1.4.4
 applaunchservices==0.3.0
